crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__extra_typing_modules.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `Class`
 --> typing_modules.py:7:15
  |
6 | X = Union[Literal[False], Literal["db"]]
7 | y = Optional["Class"]
  |               ^^^^^
