crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f-string-missing-placeholders_F541.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F541 [*] f-string without any placeholders
 --> F541.py:6:5
  |
5 | # Errors
6 | c = f"def"
  |     ^^^^^^
7 | d = f"def" + "ghi"
8 | e = (
  |
help: Remove extraneous `f` prefix
  |
5 | # Errors
  - c = f"def"
6 + c = "def"
7 | d = f"def" + "ghi"
  |

F541 [*] f-string without any placeholders
 --> F541.py:7:5
  |
5 | # Errors
6 | c = f"def"
7 | d = f"def" + "ghi"
  |     ^^^^^^
8 | e = (
9 |     f"def" +
  |
help: Remove extraneous `f` prefix
  |
6 | c = f"def"
  - d = f"def" + "ghi"
7 + d = "def" + "ghi"
8 | e = (
  |

F541 [*] f-string without any placeholders
  --> F541.py:9:5
   |
 7 | d = f"def" + "ghi"
 8 | e = (
 9 |     f"def" +
   |     ^^^^^^
10 |     "ghi"
11 | )
   |
help: Remove extraneous `f` prefix
   |
8  | e = (
   -     f"def" +
9  +     "def" +
10 |     "ghi"
   |

F541 [*] f-string without any placeholders
  --> F541.py:13:5
   |
11 | )
12 | f = (
13 |     f"a"
   |     ^^^^
14 |     F"b"
15 |     "c"
   |
help: Remove extraneous `f` prefix
   |
12 | f = (
   -     f"a"
13 +     "a"
14 |     F"b"
   |

F541 [*] f-string without any placeholders
  --> F541.py:14:5
   |
12 | f = (
13 |     f"a"
14 |     F"b"
   |     ^^^^
15 |     "c"
16 |     rf"d"
   |
help: Remove extraneous `f` prefix
   |
13 |     f"a"
   -     F"b"
14 +     "b"
15 |     "c"
   |

F541 [*] f-string without any placeholders
  --> F541.py:16:5
   |
14 |     F"b"
15 |     "c"
16 |     rf"d"
   |     ^^^^^
17 |     fr"e"
18 | )
   |
help: Remove extraneous `f` prefix
   |
15 |     "c"
   -     rf"d"
16 +     r"d"
17 |     fr"e"
   |

F541 [*] f-string without any placeholders
  --> F541.py:17:5
   |
15 |     "c"
16 |     rf"d"
17 |     fr"e"
   |     ^^^^^
18 | )
19 | g = f""
   |
help: Remove extraneous `f` prefix
   |
16 |     rf"d"
   -     fr"e"
17 +     r"e"
18 | )
   |

F541 [*] f-string without any placeholders
  --> F541.py:19:5
   |
17 |     fr"e"
18 | )
19 | g = f""
   |     ^^^
20 |
21 | # OK
   |
help: Remove extraneous `f` prefix
   |
18 | )
   - g = f""
19 + g = ""
20 |
   |

F541 [*] f-string without any placeholders
  --> F541.py:25:13
   |
24 | # Error
25 | h = "x" "y" f"z"
   |             ^^^^
26 |
27 | v = 23.234234
   |
help: Remove extraneous `f` prefix
   |
24 | # Error
   - h = "x" "y" f"z"
25 + h = "x" "y" "z"
26 |
   |

F541 [*] f-string without any placeholders
  --> F541.py:34:7
   |
33 | # Errors
34 | f"{v:{f'0.2f'}}"
   |       ^^^^^^^
35 | f"{f''}"
36 | f"{{test}}"
   |
help: Remove extraneous `f` prefix
   |
33 | # Errors
   - f"{v:{f'0.2f'}}"
34 + f"{v:{'0.2f'}}"
35 | f"{f''}"
   |

F541 [*] f-string without any placeholders
  --> F541.py:35:4
   |
33 | # Errors
34 | f"{v:{f'0.2f'}}"
35 | f"{f''}"
   |    ^^^
36 | f"{{test}}"
37 | f'{{ 40 }}'
   |
help: Remove extraneous `f` prefix
   |
34 | f"{v:{f'0.2f'}}"
   - f"{f''}"
35 + f"{''}"
36 | f"{{test}}"
   |

F541 [*] f-string without any placeholders
  --> F541.py:36:1
   |
34 | f"{v:{f'0.2f'}}"
35 | f"{f''}"
36 | f"{{test}}"
   | ^^^^^^^^^^^
37 | f'{{ 40 }}'
38 | f"{{a {{x}}"
   |
help: Remove extraneous `f` prefix
   |
35 | f"{f''}"
   - f"{{test}}"
36 + "{test}"
37 | f'{{ 40 }}'
   |

F541 [*] f-string without any placeholders
  --> F541.py:37:1
   |
35 | f"{f''}"
36 | f"{{test}}"
37 | f'{{ 40 }}'
   | ^^^^^^^^^^^
38 | f"{{a {{x}}"
39 | f"{{{{x}}}}"
   |
help: Remove extraneous `f` prefix
   |
36 | f"{{test}}"
   - f'{{ 40 }}'
37 + '{ 40 }'
38 | f"{{a {{x}}"
   |

F541 [*] f-string without any placeholders
  --> F541.py:38:1
   |
36 | f"{{test}}"
37 | f'{{ 40 }}'
38 | f"{{a {{x}}"
   | ^^^^^^^^^^^^
39 | f"{{{{x}}}}"
40 | ""f""
   |
help: Remove extraneous `f` prefix
   |
37 | f'{{ 40 }}'
   - f"{{a {{x}}"
38 + "{a {x}"
39 | f"{{{{x}}}}"
   |

F541 [*] f-string without any placeholders
  --> F541.py:39:1
   |
37 | f'{{ 40 }}'
38 | f"{{a {{x}}"
39 | f"{{{{x}}}}"
   | ^^^^^^^^^^^^
40 | ""f""
41 | ''f""
   |
help: Remove extraneous `f` prefix
   |
38 | f"{{a {{x}}"
   - f"{{{{x}}}}"
39 + "{{x}}"
40 | ""f""
   |

F541 [*] f-string without any placeholders
  --> F541.py:40:3
   |
38 | f"{{a {{x}}"
39 | f"{{{{x}}}}"
40 | ""f""
   |   ^^^
41 | ''f""
42 | (""f""r"")
   |
help: Remove extraneous `f` prefix
   |
39 | f"{{{{x}}}}"
   - ""f""
40 + "" ""
41 | ''f""
   |

F541 [*] f-string without any placeholders
  --> F541.py:41:3
   |
39 | f"{{{{x}}}}"
40 | ""f""
41 | ''f""
   |   ^^^
42 | (""f""r"")
43 | f"{v:{f"0.2f"}}"
   |
help: Remove extraneous `f` prefix
   |
40 | ""f""
   - ''f""
41 + ''""
42 | (""f""r"")
   |

F541 [*] f-string without any placeholders
  --> F541.py:42:4
   |
40 | ""f""
41 | ''f""
42 | (""f""r"")
   |    ^^^
43 | f"{v:{f"0.2f"}}"
44 | f"\{{x}}"
   |
help: Remove extraneous `f` prefix
   |
41 | ''f""
   - (""f""r"")
42 + ("" ""r"")
43 | f"{v:{f"0.2f"}}"
   |

F541 [*] f-string without any placeholders
  --> F541.py:43:7
   |
41 | ''f""
42 | (""f""r"")
43 | f"{v:{f"0.2f"}}"
   |       ^^^^^^^
44 | f"\{{x}}"
   |
help: Remove extraneous `f` prefix
   |
42 | (""f""r"")
   - f"{v:{f"0.2f"}}"
43 + f"{v:{"0.2f"}}"
44 | f"\{{x}}"
   |

F541 [*] f-string without any placeholders
  --> F541.py:44:1
   |
42 | (""f""r"")
43 | f"{v:{f"0.2f"}}"
44 | f"\{{x}}"
   | ^^^^^^^^^
help: Remove extraneous `f` prefix
   |
43 | f"{v:{f"0.2f"}}"
   - f"\{{x}}"
44 + "\{x}"
   |
