crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_allowed_unused_imports_option.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `hvplot.pandas_alias.scatter_matrix` imported but unused
  --> F401_31.py:12:33
   |
11 | # Errors
12 | from hvplot.pandas_alias import scatter_matrix
   |                                 ^^^^^^^^^^^^^^
help: Remove unused import: `hvplot.pandas_alias.scatter_matrix`
   |
12 - from hvplot.pandas_alias import scatter_matrix
   |
