crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_import_submodules_but_use_top_level.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `a.b` imported but unused
 --> f401_preview_submodule.py:3:8
  |
2 | import a.c
3 | import a.b
  |        ^^^
4 | a.foo()
  |
help: Remove unused import: `a.b`
  |
3 - import a.b
  |
