crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_import_submodules_in_function_scope.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `a` imported but unused
 --> f401_preview_submodule.py:3:8
  |
2 | # refined logic only applied _within_ scope
3 | import a
  |        ^
4 | def foo():
5 |     import a.b
  |
help: Remove unused import: `a`
  |
3 - import a
  |
