crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_multiple_unused_submodules.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `a` imported but unused
 --> f401_preview_submodule.py:2:8
  |
2 | import a
  |        ^
3 | import a.b
4 | import a.c
  |
help: Remove unused import: `a`
  |
2 - import a
  |

F401 [*] `a.b` imported but unused
 --> f401_preview_submodule.py:3:8
  |
2 | import a
3 | import a.b
  |        ^^^
4 | import a.c
  |
help: Remove unused import: `a.b`
  |
3 - import a.b
  |

F401 [*] `a.c` imported but unused
 --> f401_preview_submodule.py:4:8
  |
2 | import a
3 | import a.b
4 | import a.c
  |        ^^^
help: Remove unused import: `a.c`
  |
4 - import a.c
  |
